@@ -39,7 +39,6 @@ gnome_web_photo_LDFLAGS = -R$(MOZILLA_HOME)
 gnome_web_photo_LDADD = \
 	$(DEPENDENCY_LIBS)	\
 	$(MOZILLA_LIBS)		\
-	$(JPEG_LIBS)		\
 	$(AM_LDFLAGS)
 
 # -- Thumbnailer --------------------------------------------------------------
@@ -69,5 +68,4 @@ gnome_web_thumbnail_LDFLAGS = -R$(MOZILLA_HOME)
 gnome_web_thumbnail_LDADD = \
 	$(DEPENDENCY_LIBS)	\
 	$(MOZILLA_LIBS)		\
-	$(JPEG_LIBS)		\
 	$(AM_LDFLAGS)
